--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>QuickQR – Tiny QR Generator</title>
+  <meta name="base:app_id" content="693acc628a7c4e55fec73e2d" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta name="description" content="Generate and share QR codes in seconds with QuickQR, a beautiful one-screen mini app for Base and Farcaster." />
 
@@ -10,19 +11,19 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="QuickQR" />
   <meta property="og:description" content="Generate and share QR codes in seconds with QuickQR, a beautiful one-screen mini app for Base and Farcaster." />
-  <meta property="og:url" content="https://quickqr.example.com/" />
-  <meta property="og:image" content="https://quickqr.example.com/assets/hero.png" />
+  <meta property="og:url" content="https://quick-qr-eight.vercel.app/" />
+  <meta property="og:image" content="https://quick-qr-eight.vercel.app/assets/hero.png" />
 
   <!-- Farcaster Mini App -->
   <meta
     name="fc:miniapp"
-    content='{"version":"1","imageUrl":"https://quickqr.example.com/assets/embed-3x2.png","button":{"title":"Open QuickQR","action":{"type":"launch_frame","url":"https://quickqr.example.com/"}},"splashImageUrl":"https://quickqr.example.com/assets/splash.png","splashBackgroundColor":"#020617"}'
+    content='{"version":"1","imageUrl":"https://quick-qr-eight.vercel.app/assets/embed-3x2.png","button":{"title":"Open QuickQR","action":{"type":"launch_frame","url":"https://quick-qr-eight.vercel.app/"}},"splashImageUrl":"https://quick-qr-eight.vercel.app/assets/splash.png","splashBackgroundColor":"#020617"}'
   />
 
   <!-- Farcaster Frame (backwards compatible) -->
   <meta
     name="fc:frame"
-    content='{"version":"next","imageUrl":"https://quickqr.example.com/assets/embed-3x2.png","button":{"title":"Open QuickQR","action":{"type":"launch_frame","url":"https://quickqr.example.com/"}},"splashImageUrl":"https://quickqr.example.com/assets/splash.png","splashBackgroundColor":"#020617"}'
+    content='{"version":"next","imageUrl":"https://quick-qr-eight.vercel.app/assets/embed-3x2.png","button":{"title":"Open QuickQR","action":{"type":"launch_frame","url":"https://quick-qr-eight.vercel.app/"}},"splashImageUrl":"https://quick-qr-eight.vercel.app/assets/splash.png","splashBackgroundColor":"#020617"}'
   />
 
   <style>
